# Final-Project

./: DATN-106190148-NguyenTienDung-106190143-LeDucQuocAnh.pptx  Hướng dẫn chạy code.docx  README.md  main_processingImage.c  processingImage1_2.py
ControlMotor/: ControlMotor.ino
DATN-106190148-NguyenTienDung-106190143-LeDucQuocAnh-Source/: CMakeLists.txt  app_camera_esp.c  app_camera_esp.h  esp_cli.c  esp_lcd.c  esp_lcd.h  esp_main.h  image_provider.cc  image_provider.h  main.cc  main_functions.cc  main_functions.h  model_settings.cc  model_settings.h  number_recognition_model_data.cc  number_recognition_model_data.h  recognition_responder.cc  recognition_responder.h
Model/: chia255.py  converted_BMP.py  converted_model.tflite  model.cc  model.py  model_IOT.ipynb  model_IOT_predict.ipynb  model_IOT_predict_copy.ipynb  resize.py
test40lan/: PREDICT.TXT
